// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BankAccountDetails:  renders a snapshot of <BankAccountDetails /> when bankDetails is false 1`] = `
<div
  className="ant-card ant-card-bordered card__wrapper"
>
  <div
    className="ant-card-body"
    style={Object {}}
  >
    <header
      className="header"
    >
      <h2
        className="ant-typography"
        onClick={null}
        style={
          Object {
            "WebkitLineClamp": undefined,
          }
        }
      >
        Your Bank Account Details
      </h2>
    </header>
    <section>
      <div
        className="no__bank__details"
      >
        <div
          className="image__container"
        >
          <img
            src="[jest.find('../utils')]"
          />
          <p>
            <span
              className="ant-typography"
              onClick={null}
              style={
                Object {
                  "WebkitLineClamp": undefined,
                }
              }
            >
              No account set yet
            </span>
          </p>
        </div>
        <p>
          <span
            className="ant-typography"
            onClick={null}
            style={
              Object {
                "WebkitLineClamp": undefined,
              }
            }
          >
            To start receiving money from your sales ensure you setup your bank details
          </span>
        </p>
        <a
          href="/account/sales/payouts/set-up-bank-details"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Setup Bank Details
        </a>
      </div>
    </section>
  </div>
</div>
`;

exports[`BankAccountDetails:  renders a snapshot of <BankAccountDetails /> when bankDetails is true 1`] = `
<div
  className="ant-card ant-card-bordered card__wrapper"
>
  <div
    className="ant-card-body"
    style={Object {}}
  >
    <header
      className="header"
    >
      <h2
        className="ant-typography"
        onClick={null}
        style={
          Object {
            "WebkitLineClamp": undefined,
          }
        }
      >
        Your Bank Account Details
      </h2>
    </header>
    <section>
      <div
        className="bank__details"
      >
        <p>
          <span
            className="ant-typography"
            onClick={null}
            style={
              Object {
                "WebkitLineClamp": undefined,
              }
            }
          >
            We pay the money made from your sales into this account.
          </span>
        </p>
        <div
          className="bank__info__details paypal__info"
        >
          <p>
            <span
              className="ant-typography"
              onClick={null}
              style={
                Object {
                  "WebkitLineClamp": undefined,
                }
              }
            >
              PayPal Email:
            </span>
            <span
              className="ant-typography"
              onClick={null}
              style={
                Object {
                  "WebkitLineClamp": undefined,
                }
              }
            >
                
            </span>
          </p>
        </div>
        <button
          className="ant-btn ant-btn-primary ant-btn-lg"
          onClick={[Function]}
          type="button"
        >
          <span>
            Change Payout Account Settings
          </span>
        </button>
      </div>
    </section>
  </div>
</div>
`;
